--- a/nextjs-filters-rushdb-sdk/package.json
+++ b/nextjs-filters-rushdb-sdk/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=3001 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -40,7 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@rushdb/javascript-sdk": "^0.11.6",
+    "@rushdb/javascript-sdk": "^0.12.0",
     "@tanstack/react-query": "^5.66.0",
     "@uiw/react-textarea-code-editor": "latest",
     "autoprefixer": "^10.4.20",
