--- a/nextjs-filters-rushdb-sdk/package.json
+++ b/nextjs-filters-rushdb-sdk/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@rushdb/javascript-sdk": "^0.12.0",
     "@tanstack/react-query": "^5.66.0",
+    "@uiw/react-json-view": "^2.0.0-alpha.30",
     "@uiw/react-textarea-code-editor": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -58,7 +59,6 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
-    "react-syntax-highlighter": "^15.6.1",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
