feat: added README.md, some small updates for API

--- a/express-books-rag/package.json
+++ b/express-books-rag/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "dev": "tsx --watch --env-file .env src/index.ts",
     "start": "node --env-file .env dist/index.js",
     "import": "tsx --env-file .env src/import-data.ts",
