--- a/nuxt-auth-rushdb-sdk/package.json
+++ b/nuxt-auth-rushdb-sdk/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@rushdb/javascript-sdk": "^1.7.0",
     "jsonwebtoken": "^9.0.2",
-    "nuxt": "^3.8.0",
-    "radix-vue": "^1.9.17"
+    "nuxt": "^3.8.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.0.0",
